Remove argLine --illegal-access=permit