@@ -1,6 +1,5 @@
 rem start /low java ^
 java ^
---illegal-access=permit ^
 --add-opens java.base/java.lang=ALL-UNNAMED ^
 --add-opens java.base/java.io=ALL-UNNAMED ^
 --add-opens java.base/java.nio=ALL-UNNAMED ^
